load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "domain",
    srcs = [
        "environment.go",
        "errors.go",
        "preferences.go",
        "role.go",
        "user.go",
    ],
    importpath = "github.com/tadoku/tadoku/services/identity-api/domain",
    visibility = ["//visibility:public"],
    deps = ["@com_github_srvc_fail//:fail"],
)

go_test(
    name = "domain_test",
    srcs = [
        "user_test.go",
        "validate_test.go",
    ],
    deps = [
        ":domain",
        "@com_github_asaskevich_govalidator//:govalidator",
        "@com_github_stretchr_testify//assert",
    ],
)
