load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "usecases",
    srcs = [
        "clock.go",
        "clock_mock.go",
        "error_reporter.go",
        "error_reporter_mock.go",
        "jwt_generator.go",
        "jwt_generator_mock.go",
        "password_hasher.go",
        "password_hasher_mock.go",
        "repositories.go",
        "repositories_mock.go",
        "role_authenticator.go",
        "session_claims.go",
        "session_interactor.go",
        "session_interactor_mock.go",
        "user_interactor.go",
        "user_interactor_mock.go",
        "validatable.go",
        "validator.go",
        "validator_mock.go",
    ],
    importpath = "github.com/tadoku/tadoku/services/identity-api/usecases",
    visibility = ["//visibility:public"],
    deps = [
        "//services/identity-api/domain",
        "@com_github_golang_mock//gomock",
        "@com_github_srvc_fail//:fail",
    ],
)

go_test(
    name = "usecases_test",
    srcs = [
        "session_interactor_test.go",
        "user_interactor_test.go",
    ],
    deps = [
        ":usecases",
        "//services/identity-api/domain",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
    ],
)
