load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cache",
    srcs = ["usercache.go"],
    importpath = "github.com/tadoku/tadoku/services/immersion-api/cache",
    visibility = ["//visibility:public"],
    deps = [
        "//services/immersion-api/domain/query",
        "@com_github_sahilm_fuzzy//:fuzzy",
    ],
)
