load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "domain",
    srcs = [
        "contest_configuration_options.go",
        "contest_find.go",
        "contest_find_latest_official.go",
        "contest_list.go",
        "contest_summary_fetch.go",
        "errors.go",
        "log_configuration_options.go",
        "log_find.go",
        "models.go",
        "profile_yearly_activity_split.go",
    ],
    importpath = "github.com/tadoku/tadoku/services/immersion-api/domain",
    visibility = ["//visibility:public"],
    deps = [
        "//services/common/domain",
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "domain_test",
    srcs = [
        "contest_configuration_options_test.go",
        "contest_find_latest_official_test.go",
        "contest_find_test.go",
        "contest_list_test.go",
        "contest_summary_fetch_test.go",
        "log_configuration_options_test.go",
        "log_find_test.go",
        "profile_yearly_activity_split_test.go",
    ],
    deps = [
        ":domain",
        "//services/common/domain",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
