load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "domain",
    srcs = [
        "contest_configuration_options.go",
        "contest_find.go",
        "contest_find_latest_official.go",
        "contest_leaderboard_fetch.go",
        "contest_list.go",
        "contest_permission_check.go",
        "contest_summary_fetch.go",
        "errors.go",
        "leaderboard_global.go",
        "leaderboard_yearly.go",
        "log_configuration_options.go",
        "log_find.go",
        "log_list_for_contest.go",
        "log_list_for_user.go",
        "models.go",
        "profile_contest.go",
        "profile_contest_activity.go",
        "profile_fetch.go",
        "profile_yearly_activity.go",
        "profile_yearly_activity_split.go",
        "profile_yearly_scores.go",
        "registration_find.go",
        "registration_list_ongoing.go",
        "registration_list_yearly.go",
        "user_list.go",
    ],
    importpath = "github.com/tadoku/tadoku/services/immersion-api/domain",
    visibility = ["//visibility:public"],
    deps = [
        "//services/common/domain",
        "@com_github_google_uuid//:uuid",
        "@com_github_sahilm_fuzzy//:fuzzy",
    ],
)

go_test(
    name = "domain_test",
    srcs = [
        "contest_configuration_options_test.go",
        "contest_find_latest_official_test.go",
        "contest_find_test.go",
        "contest_leaderboard_fetch_test.go",
        "contest_list_test.go",
        "contest_permission_check_test.go",
        "contest_summary_fetch_test.go",
        "leaderboard_global_test.go",
        "leaderboard_yearly_test.go",
        "log_configuration_options_test.go",
        "log_find_test.go",
        "log_list_for_contest_test.go",
        "log_list_for_user_test.go",
        "profile_contest_activity_test.go",
        "profile_contest_test.go",
        "profile_fetch_test.go",
        "profile_yearly_activity_split_test.go",
        "profile_yearly_activity_test.go",
        "profile_yearly_scores_test.go",
        "registration_find_test.go",
        "registration_list_ongoing_test.go",
        "registration_list_yearly_test.go",
        "user_list_test.go",
    ],
    deps = [
        ":domain",
        "//services/common/domain",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
