load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "domain",
    srcs = [
        "authz.go",
        "contestconfigurationoptions.go",
        "contestcreate.go",
        "contestfind.go",
        "contestfindlatestofficial.go",
        "contestleaderboardfetch.go",
        "contestlist.go",
        "contestmoderationdetachlog.go",
        "contestpermissioncheck.go",
        "contestsummaryfetch.go",
        "errors.go",
        "interfaces.go",
        "languagecreate.go",
        "languagelist.go",
        "languageupdate.go",
        "leaderboardglobal.go",
        "leaderboardoutboxworker.go",
        "leaderboardrank.go",
        "leaderboardupdater.go",
        "leaderboardyearly.go",
        "logconfigurationoptions.go",
        "logcontestupdate.go",
        "logcreate.go",
        "logdelete.go",
        "logfind.go",
        "loglistforcontest.go",
        "loglistforuser.go",
        "logupdate.go",
        "models.go",
        "moderationaudit.go",
        "profilecontest.go",
        "profilecontestactivity.go",
        "profilefetch.go",
        "profileyearlyactivity.go",
        "profileyearlyactivitysplit.go",
        "profileyearlyscores.go",
        "registrationfind.go",
        "registrationlistongoing.go",
        "registrationlistyearly.go",
        "registrationupsert.go",
        "tags.go",
        "tagsuggestions.go",
        "userupsert.go",
    ],
    importpath = "github.com/tadoku/tadoku/services/immersion-api/domain",
    visibility = ["//visibility:public"],
    deps = [
        "//services/common/authz/roles",
        "//services/common/domain",
        "@com_github_go_playground_validator_v10//:validator",
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "domain_test",
    srcs = [
        "contestconfigurationoptions_test.go",
        "contestcreate_test.go",
        "contestfind_test.go",
        "contestfindlatestofficial_test.go",
        "contestleaderboardfetch_test.go",
        "contestlist_test.go",
        "contestmoderationdetachlog_test.go",
        "contestpermissioncheck_test.go",
        "contestsummaryfetch_test.go",
        "languagecreate_test.go",
        "languagelist_test.go",
        "languageupdate_test.go",
        "leaderboardglobal_test.go",
        "leaderboardoutboxworker_test.go",
        "leaderboardrank_test.go",
        "leaderboardupdater_test.go",
        "leaderboardyearly_test.go",
        "logconfigurationoptions_test.go",
        "logcontestupdate_test.go",
        "logcreate_test.go",
        "logdelete_test.go",
        "logfind_test.go",
        "loglistforcontest_test.go",
        "loglistforuser_test.go",
        "logupdate_test.go",
        "profilecontest_test.go",
        "profilecontestactivity_test.go",
        "profilefetch_test.go",
        "profileyearlyactivity_test.go",
        "profileyearlyactivitysplit_test.go",
        "profileyearlyscores_test.go",
        "registrationfind_test.go",
        "registrationlistongoing_test.go",
        "registrationlistyearly_test.go",
        "registrationupsert_test.go",
        "roles_context_test.go",
        "tags_test.go",
        "tagsuggestions_test.go",
        "userupsert_test.go",
    ],
    embed = [":domain"],
    deps = [
        "//services/common/domain",
        "//services/common/testutil/authzctx",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
