load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cache",
    srcs = ["usercache.go"],
    importpath = "github.com/tadoku/tadoku/services/profile-api/cache",
    visibility = ["//visibility:public"],
    deps = ["//services/profile-api/domain"],
)

go_test(
    name = "cache_test",
    srcs = ["usercache_test.go"],
    deps = [
        ":cache",
        "//services/profile-api/domain",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
