load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = [
        "interactors.go",
        "repositories.go",
        "server.go",
        "services.go",
    ],
    importpath = "github.com/tadoku/tadoku/services/reading-contest-api/app",
    visibility = ["//visibility:public"],
    deps = [
        "//services/reading-contest-api/domain",
        "//services/reading-contest-api/infra",
        "//services/reading-contest-api/interfaces/rdb",
        "//services/reading-contest-api/interfaces/repositories",
        "//services/reading-contest-api/interfaces/services",
        "//services/reading-contest-api/usecases",
        "@com_github_creasty_configo//:configo",
    ],
)
