load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "infra",
    srcs = [
        "context.go",
        "error_reporter.go",
        "govalidate.go",
        "rdb.go",
        "router.go",
        "sql.go",
        "validator.go",
    ],
    importpath = "github.com/tadoku/tadoku/services/reading-contest-api/infra",
    visibility = ["//visibility:public"],
    deps = [
        "//services/reading-contest-api/domain",
        "//services/reading-contest-api/interfaces/rdb",
        "//services/reading-contest-api/interfaces/services",
        "//services/reading-contest-api/usecases",
        "@com_github_asaskevich_govalidator//:govalidator",
        "@com_github_dgrijalva_jwt_go//:jwt-go",
        "@com_github_getsentry_sentry_go//:sentry-go",
        "@com_github_getsentry_sentry_go//echo",
        "@com_github_jmoiron_sqlx//:sqlx",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
        "@com_github_lib_pq//:pq",
        "@com_github_srvc_fail//:fail",
    ],
)

go_test(
    name = "infra_test",
    srcs = ["router_test.go"],
    deps = [
        ":infra",
        "//services/reading-contest-api/domain",
        "//services/reading-contest-api/interfaces/services",
        "@com_github_stretchr_testify//assert",
    ],
)
