load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "test",
    srcs = ["helpers.go"],
    importpath = "github.com/tadoku/tadoku/services/reading-contest-api/test",
    visibility = ["//visibility:public"],
    deps = [
        "//services/reading-contest-api/domain",
        "@com_github_creasty_configo//:configo",
    ],
)
