load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "usecases",
    srcs = [
        "contest_interactor.go",
        "contest_interactor_mock.go",
        "error_reporter.go",
        "error_reporter_mock.go",
        "ranking_interactor.go",
        "ranking_interactor_mock.go",
        "repositories.go",
        "repositories_mock.go",
        "role_authenticator.go",
        "session_claims.go",
        "session_interactor_mock.go",
        "validatable.go",
        "validator.go",
        "validator_mock.go",
    ],
    importpath = "github.com/tadoku/tadoku/services/reading-contest-api/usecases",
    visibility = ["//visibility:public"],
    deps = [
        "//services/reading-contest-api/domain",
        "@com_github_golang_mock//gomock",
        "@com_github_srvc_fail//:fail",
    ],
)

go_test(
    name = "usecases_test",
    srcs = [
        "contest_interactor_test.go",
        "ranking_interactor_test.go",
    ],
    deps = [
        ":usecases",
        "//services/reading-contest-api/domain",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
    ],
)
